fix: text-highlight dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -44,8 +44,9 @@
   }
 
   .text-highlight {
-    @apply text-indigo-600;
+    @apply text-indigo-600 dark:text-indigo-300;
   }
+
 
   details summary:hover::before {
     filter: invert(0.05);
